--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="chamada">
+        <div class="chamada-texto">
+            <header>Os jogadores famosos jogando poppy playtime</header>
+            <h1>PRESO EM UMA FÁBRICA ABANDONADA DE BRINQUEDOS! - Poppy Playtime</h1>
+        </div>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/3yMIbeYmI98?si=zHzJfLcA426353jo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+
 </body>
 </html>
