links de videos

--- a/index.html
+++ b/index.html
@@ -25,6 +25,22 @@
             <a href="https://www.youtube.com/watch?v=PkoCMJRANIM">
                 <img src="https://img.youtube.com/vi/PkoCMJRANIM/maxresdefault.jpg">
             </a>
+            <a href="https://www.youtube.com/watch?v=oRCM5Byh3rA">
+                <img src="https://img.youtube.com/vi/oRCM5Byh3rA/maxresdefault.jpg">
+            </a>
+            <a href="https://www.youtube.com/watch?v=HlUa0ZkAjiU">
+                <img src="https://img.youtube.com/vi/HlUa0ZkAjiU/maxresdefault.jpg">
+            </a>
+            <a href="https://www.youtube.com/watch?v=-6yo8FZKNoU">
+                <img src="https://img.youtube.com/vi/-6yo8FZKNoU/maxresdefault.jpg">
+            </a>
+            <a href="https://www.youtube.com/watch?v=emCgXvTAkhU">
+                <img src="https://img.youtube.com/vi/emCgXvTAkhU/maxresdefault.jpg">
+            </a>
+            <a href="https://www.youtube.com/watch?v=0oTfnmHVe-Y">
+                <img src="https://img.youtube.com/vi/0oTfnmHVe-Y/maxresdefault.jpg">
+            </a>
+
         </div>
     </section>
 
